Removing many parts

--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -291,9 +291,9 @@
       },
       "source": [
         "*Araldo*: \n",
-        "We know from the description of the dataset, that each sample represents a period of 10 min and that we 1 week measurement (and thus we have 1008 periods in total). We can thus index the dataset, with the corresponding column of time-stamps. To do so, we first create the vector `dates`, and then we set it as the index of the dataframe.\n",
+        "We know from the description of the dataset, that each sample represents a period of 10 min and that we have 1 week measurements (and thus we have 1008 periods in total). We can thus index the dataset, with the corresponding column of time-stamps. To do so, we first create the vector `dates`, and then we set it as the index of the dataframe.\n",
         "\n",
-        "*Araldo*: Each column counts the amount of bytes flowing between the OD pair."
+        "*Araldo*: Each column counts the amount of bytes flowing between the Origin-Destination (OD) pair of nodes."
       ]
     },
     {
@@ -1383,7 +1383,7 @@
         "\n",
         "Your dataset may have columns with different magnitudes, e.g., columms are in different unities of measurement, for instance bytes, gygabytes, 5-stars-ratings and audio bitrates all in the same dataset, if you apply Singular Value Decomposition (SVD) right away, the columns with the highest magnitude risk to monopolize the decomposition. \n",
         "\n",
-        "In such cases, it is advisable to apply StandardScaler to your dataset and apply SVD to the transformed dataset. Observe that Standard scaling also center all the columns of the dataset aroung their mean, which is also useful, as it makes the decomposition insensible to the mean of each column.\n",
+        "In such cases, it is advisable to apply StandardScaler to your dataset and apply SVD to the transformed dataset. Observe that Standard scaling also center all the columns of the dataset around their mean, which is also useful, as it makes the decomposition insensible to the mean of each column.\n",
         "\n",
         "However, in this notebook, Marc Crovella decided not to scale and center the dataset. In his case, this is acceptable, as all the columns have the same semantics and the same magnitude (they are all traffic counts).\n",
         "\n",
@@ -1411,12 +1411,14 @@
         "outputId": "e18a1f6a-2c31-4040-8df1-392a613ac537"
       },
       "source": [
-        "u,s,vt = np.linalg.svd(Atraf)\n",
+        "U,Sigma,Vt = np.linalg.svd(Atraf)\n",
+        "\n",
+        "### Plotting\n",
         "fig = plt.figure(figsize=(9,6))\n",
-        "plt.plot(range(1,1+len(s)),s)\n",
+        "plt.plot(range(1,1+len(Sigma)),Sigma)\n",
         "plt.xlabel(r'$k$',size=20)\n",
         "plt.ylabel(r'$\\sigma_k$',size=20)\n",
-        "plt.title(r'Singular Values of $A$',size=20)\n",
+        "plt.title(r'Singular Values of $\\mathbf{A}$',size=20)\n",
         "print('')"
       ],
       "execution_count": null,
@@ -1453,7 +1455,7 @@
         "id": "VxMNTBLhtNor"
       },
       "source": [
-        "*Araldo*: We now just plot the first 20 singular values, normalized by the norm of $A$."
+        "*Araldo*: We now just plot the first 20 singular values, normalized by the norm of $\\mathbf{A}$."
       ]
     },
     {
@@ -1467,8 +1469,10 @@
         "outputId": "1decf267-687b-4d7e-b878-fa614dde294a"
       },
       "source": [
-        "fig = plt.figure(figsize=(9,6))\n",
         "Anorm = np.linalg.norm(Atraf)\n",
+        "\n",
+        "### Plotting\n",
+        "fig = plt.figure(figsize=(9,6))\n",
         "plt.plot(range(1,21),s[0:20]/Anorm)\n",
         "plt.xlim([0,20])\n",
         "plt.xlabel(r'$k$',size=20)\n",
@@ -1509,7 +1513,9 @@
         "id": "x6W6REdFuO78"
       },
       "source": [
-        "*Araldo*: To obtain the error of rank-$k$ approximation, we apply claim 1 of the previous theorem."
+        "*Araldo*: The theory (slides) tells us that the approximation error when reconstructing $\\mathbf{A}$ using only $k$ principal components is\n",
+        "$$ \\text{err} =\\sqrt{\\sigma_{r-k}^2+\\sigma_{r-k+1}^2+\\dots+\\sigma_r^2}\n",
+        "$$"
       ]
     },
     {
@@ -1518,11 +1524,13 @@
         "id": "WBABqbpzIhef"
       },
       "source": [
-        "fig = plt.figure(figsize=(9,6))\n",
-        "Anorm = np.linalg.norm(Atraf)\n",
-        "err = np.cumsum(s[::-1]**2)\n",
+        "Anorm = np.linalg.norm(Atraf) # Froebenius norm\n",
+        "err = np.cumsum(Sigma[::-1]**2)\n",
         "err = np.sqrt(err[::-1])\n",
-        "plt.plot(range(1,21),err[:20]/Anorm)\n",
+        "plt.plot(range(1,21),err[:20]/Anorm) # Error in percentage\n",
+        "\n",
+        "# Plotting\n",
+        "fig = plt.figure(figsize=(9,6))\n",
         "plt.xlim([0,20])\n",
         "plt.xlabel(r'$k$',size=20)\n",
         "plt.ylabel(r'relative F-norm error',size=20)\n",
@@ -1569,41 +1577,6 @@
       },
       "source": [
         "So we are down to 4% relative error using only the 7 vectors $\\{\\vu_1,\\dots,\\vu_7\\}$ to describe all the columns of $A$."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "collapsed": true,
-        "id": "J_NzpsulIher"
-      },
-      "source": [
-        "Let's look at some other examples:\n",
-        "\n",
-        "#### Source-Destination Traffic Matrices.\n",
-        "\n",
-        "Here, the matrix is the number of bytes from each source to each destination in a major ISP over one hour.\n",
-        "\n",
-        "<center>\n",
-        "<img width=375, src = images/src-dest-ISP.png/>\n",
-        "</center>\n",
-        "\n",
-        "This is a plot of the normalized singular values."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "L38gFz5WIher"
-      },
-      "source": [
-        "Note that Origin-Destination flows are often modeled using a so-called \"gravity model.\"  \n",
-        "\n",
-        "In this model, the traffic $f_{ij}$ that enters the network at $i$ and leaves the network at $j$ is modeled as\n",
-        "\n",
-        "$$f_{ij} = \\alpha_i \\beta_j$$\n",
-        "\n",
-        "Seen from our standpoint, this is simply a rank-1 model. Every column $f_{*j}$ is a multiple of the single vector $\\alpha.$"
       ]
     },
     {
