Remove the reference to low-dimensionality phenomenon

--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -38,7 +38,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/andreaaraldo/mining-low-dim-network-data/blob/temp/BarcelonaCourse.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/andreaaraldo/mining-low-dim-network-data/blob/master/BarcelonaCourse.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -76,7 +76,7 @@
         "from IPython.display import HTML\n",
         "print('')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -85,36 +85,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "collapsed": true,
-        "id": "5jNCEC-JIhd2"
-      },
-      "source": [
-        "## My Claim\n",
-        "\n",
-        "\n",
-        "\n",
-        "__In the aggregate, \"normal\" human activity is frequently low-dimensional.__\n",
-        "\n",
-        "\n",
-        "I'll call this the \"low-dimensional phenomenon.\""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OLxmlMc-Ihd4"
-      },
-      "source": [
-        "In the rest of this lecture I'll answer these two questions:\n",
-        "\n",
-        "1. What does \"the low-dimensional phenomenon\" mean?\n",
-        "\n",
-        "2. Why does \"the low-dimensional phenomenon\" matter?"
       ]
     },
     {
@@ -167,7 +137,7 @@
         "Atraf = pd.read_table('data/net-traffic/AbileneFlows/X',sep='  ',header=None,\n",
         "                      names=odnames,engine='python')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +185,7 @@
         "Atraf.index = dates\n",
         "Atraf"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1327,7 +1297,7 @@
         "plt.title(r'Singular Values of $\\mathbf{A}$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1420,7 +1390,7 @@
         "plt.ylabel(r'$\\sigma_k$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1487,7 +1457,7 @@
         "plt.title(r'Relative Error of rank-$k$ approximation to $A$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1527,25 +1497,9 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AuIMVKs2IhfA"
-      },
-      "source": [
-        "How can we understand this low-dimensional phenomenon in general?\n",
-        "\n",
-        "There are two helpful interpretations:\n",
-        "\n",
-        "1. Common Patterns\n",
-        "2. Latent Factors"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "0xv64oDiIhfB"
       },
       "source": [
-        "### Common Patterns.\n",
-        "\n",
         "$$ A \\approx U'\\Sigma'(V')^T $$\n",
         "\n",
         "In this interpretation, we think of each sample (column of $A$) as a combination of the columns of $U'$."
@@ -1592,7 +1546,7 @@
         "Uframe[0].plot()\n",
         "Uframe[1].plot()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1639,7 +1593,7 @@
         "Uframe[2].plot()\n",
         "Uframe[3].plot()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1675,32 +1629,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "collapsed": true,
-        "id": "Ae5VWD11IhfW"
-      },
-      "source": [
-        "# Why Does the Low-Dimensional Phenomenon Matter?"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "JuOP0p_yIhfW"
-      },
-      "source": [
-        "We'll discuss two ways to exploit the low-dimensional phenomenon:\n",
-        "\n",
-        "1. Anomaly Detection\n",
-        "2. Matrix Completion"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "gUvHIqLsIhfX"
       },
       "source": [
-        "## Anomaly Detection via the Low-Dimensional Phenomenon"
+        "# Anomaly Detection via the Low-Dimensional Phenomenon"
       ]
     },
     {
@@ -1709,8 +1641,6 @@
         "id": "B_ZuSXMjIhfZ"
       },
       "source": [
-        "The first application of the phenomenon is anomaly detection.\n",
-        "\n",
         "The anomaly detection problem is as follows: given a population $P$, divide the members of $P$ in a normal set $N$ and an anomalous set $O$."
       ]
     },
@@ -1828,7 +1758,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('First 12 Columns of $U$',size=20)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1902,7 +1832,7 @@
         "plt.xlabel('10-minutes intervals')\n",
         "plt.title(r'$\\ell_2$ Norm of Anomalous Traffic')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1968,7 +1898,7 @@
         "plt.title('Top 15 Anomalies')\n",
         "plt.xlabel('10-minutes intervals')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2045,7 +1975,7 @@
         "print(FBSpatial)\n",
         "print(FBSpatial.shape)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2099,7 +2029,7 @@
         "plt.title('Number of Likes Per User')\n",
         "plt.xlabel('Users')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2159,7 +2089,7 @@
         "plt.xlabel(r'$k$',size=20)\n",
         "plt.ylabel(r'$\\sigma_k$',size=20)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2241,7 +2171,7 @@
         "plt.xlabel('User ids', size=20)\n",
         "plt.ylabel('Total likes',size=20)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2320,7 +2250,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Anomalous Users',size=20)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2385,7 +2315,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Normal Users',size=20)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2478,7 +2408,7 @@
         "plt.xlabel('k', size=20)\n",
         "plt.ylabel(r'Normalized $\\sigma_k$', size=20)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2541,7 +2471,7 @@
         "anomSet = np.argsort(Onorm)[-30:]\n",
         "\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2570,7 +2500,7 @@
         "plt.xlabel('User ids', size=20)\n",
         "plt.ylabel('Total likes', size=20)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2622,7 +2552,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Anomalous Users',size=20)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2678,7 +2608,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('Nine Example Normal Users',size=20)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2818,7 +2748,7 @@
       "source": [
         ""
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     }
   ]
