--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -27,6 +27,7 @@
     "colab": {
       "name": "BarcelonaCourse.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -166,7 +167,7 @@
         "*Araldo*: \n",
         "We know from the description of the dataset, that each sample represents a period of 10 min and that we have 1 week measurements (and thus we have 1008 periods in total). We can thus index the dataset, with the corresponding column of time-stamps. To do so, we first create the vector `dates`, and then we set it as the index of the dataframe.\n",
         "\n",
-        "*Araldo*: Each column counts the amount of bytes flowing between the Origin-Destination (OD) pair of nodes."
+        "*Araldo*: Each column counts the amount of bytes flowing between a pair of nodes."
       ]
     },
     {
