Small re-phrasing

--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -76,7 +76,7 @@
         "from IPython.display import HTML\n",
         "print('')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
         "Atraf = pd.read_table('data/net-traffic/AbileneFlows/X',sep='  ',header=None,\n",
         "                      names=odnames,engine='python')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +185,7 @@
         "Atraf.index = dates\n",
         "Atraf"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1374,7 +1374,7 @@
         "plt.title(r'Singular Values of $\\mathbf{A}$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1466,7 +1466,7 @@
         "plt.ylabel(r'$\\sigma_k$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1532,7 +1532,7 @@
         "plt.title(r'Relative Error of rank-$k$ approximation to $A$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1620,7 +1620,7 @@
         "Uframe[0].plot(xlabel='Timestamp', ylabel='Traffic')\n",
         "Uframe[1].plot()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1664,7 +1664,7 @@
         "Uframe[2].plot(xlabel='Timestamp', ylabel='Traffic')\n",
         "Uframe[3].plot()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1826,7 +1826,7 @@
         "plt.subplots_adjust(wspace=0.25,hspace=0.45)\n",
         "plt.suptitle('First 12 Columns of $U$',size=20)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1898,7 +1898,7 @@
         "plt.ylabel('Traffic')\n",
         "plt.title(r'$\\ell_2$ Norm of Anomalous Traffic')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1961,7 +1961,7 @@
         "plt.title('Top 15 Anomalies')\n",
         "plt.xlabel('10-minutes intervals')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1994,9 +1994,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Observe that these anomalies were **hidden**, i.e., they are not easily observable just by looking at the norm of the original traffic matrix.\n",
+        "Observe that these anomalies were **hidden**, i.e., they are not easily observable just by looking at the norm of the original traffic matrix over time.\n",
         "\n",
-        "In order to unveil such anomalies, we had to get the \"normal\" behavior, taking into account all the OD pairs, and see what falls outside it (`Otraf`)."
+        "In order to unveil such anomalies, we had to get the \"normal\" behavior via Dimensionality Reduction and define all that is left out (`Otraf`) as anomaly. Note that the power of Dimensionality Reduction is that it is able to consider the evolution of all OD flows jointly, and not only the evolution of the traffic matrix norm."
       ],
       "metadata": {
         "id": "0-zNXlv3YfL6"
@@ -2017,7 +2017,7 @@
         "id": "0BfD6S75JvrY"
       },
       "source": [
-        "*Araldo*: We want to recognize \"fake\" users, i.e., profiles created (or legitimate profiles compromised) in order to perform malicious activity, as artificially increasing the number of likes of certain pages, which may pay for this kind of \"service\" to gain popularity [1]."
+        "*Araldo*: We want to recognize \"fake\" users, i.e., profiles created (or legitimate profiles compromised) with the objective to perform malicious activity, as artificially increasing the number of likes of certain pages, which may pay for this kind of \"service\" to gain popularity [1]."
       ]
     },
     {
@@ -2046,7 +2046,7 @@
         "print(FBSpatial)\n",
         "print(FBSpatial.shape)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2281,7 +2281,7 @@
         "id": "0j04rbQKlYiO"
       },
       "source": [
-        "Note that we are not simply distinguish malicious as the ones who put too many likes. We also discover anomalous users with few likes. Let's see what makes them abnormal."
+        "Anomalous users are **not only those who put a lot of likes**. We also discover anomalous users with few likes. Let's see what makes them abnormal."
       ]
     },
     {
@@ -2290,7 +2290,7 @@
         "id": "EtKGLsKy4Uwy"
       },
       "source": [
-        "*Araldo* In paper[1] the authors can evaluate the performance of their anomaly detector, based on ground truth (some samples that represent true anomalous users and true normal users)."
+        "In paper[1] the authors can evaluate the performance of their anomaly detector, based on ground truth (some samples that represent true anomalous users and true normal users). We will instead not compare with ground truth."
       ]
     },
     {
@@ -2425,7 +2425,7 @@
         "id": "Tjn1Lgwv5nvu"
       },
       "source": [
-        "*Araldo*: Look at the scale of these plots. Users classified as anomalous have a much higher activity on too many categories. Normal users, instead, only like few categories"
+        "*Araldo*: Look at the scale of these plots. **Anomlaous users like too many different categories**. Instead, **Normal users only like few categories**."
       ]
     },
     {
@@ -2719,7 +2719,7 @@
       },
       "source": [
         "Interestingly, what makes a user anomalous seems to have reversed from the case of the spatial data.\n",
-        "Anomalous users are \"spiky\"."
+        "**Anomalous users are \"spiky\", while the activity of normal users is more constant**."
       ]
     },
     {
