--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -76,7 +76,7 @@
         "from IPython.display import HTML\n",
         "print('')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
         "Atraf = pd.read_table('data/net-traffic/AbileneFlows/X',sep='  ',header=None,\n",
         "                      names=odnames,engine='python')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,7 +185,7 @@
         "Atraf.index = dates\n",
         "Atraf"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1374,7 +1374,7 @@
         "plt.title(r'Singular Values of $\\mathbf{A}$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1466,7 +1466,7 @@
         "plt.ylabel(r'$\\sigma_k$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1532,7 +1532,7 @@
         "plt.title(r'Relative Error of rank-$k$ approximation to $A$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1644,7 +1644,7 @@
         "1.  Compute the Singular value decomposition of $A$, $$U\\Sigma V^T = A.$$\n",
         "2.  Compute a low-rank approximation to $A$, using only $k$ components: $$N = U_k \\cdot \\Sigma_k \\cdot V_k^T.$$\n",
         "3.  Compute the data not explained by $N$:  $$O = A-N.$$\n",
-        "4.  Indentify the rows of $O$ with largest $\\ell_2$ (Euclidean) norm: these rows correspond to anomalies."
+        "4.  Indentify the rows of $O$ with largest $\\ell_2$ (Euclidean) norm: these rows correspond to anomalies. In other words, the Euclidean norm of each line is its anomaly score."
       ]
     },
     {
@@ -1659,7 +1659,7 @@
         "2. Deciding how many of the largest rows of $O$ are anomalies.\n",
         "\n",
         "For 1, the general idea is to choose a $k$ at the knee of the singular value plot.  \n",
-        "For 2, there are statistical methods that generally work reasonably well."
+        "For 2, we can plot the Precision-Recall and ROC curves and decide a threshold based on that (see [my other code](https://github.com/andreaaraldo/machine-learning-for-networks/blob/master/06.clustering-and-anomaly/06.b.isolation-forest.ipynb))."
       ]
     },
     {
@@ -1713,7 +1713,7 @@
         "plt.ylabel('Traffic')\n",
         "plt.title(r'$\\ell_2$ Norm of Anomalous Traffic')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1754,6 +1754,27 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# choose the top 15 anomalous time intervals\n",
+        "anomalies = np.argsort(Onorm)[-15:]"
+      ],
+      "metadata": {
+        "id": "Zb1aMY_4hjUD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's plot the curve of total traffic and let us add the anomaly as points on top of this curve."
+      ],
+      "metadata": {
+        "id": "hmFDQO_6hj9o"
+      }
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "vYGM1gZTIhfn",
         "colab": {
@@ -1763,11 +1784,9 @@
         "outputId": "6184aa83-8ad9-4b99-d10a-4d4583d79dd0"
       },
       "source": [
-        "# choose the top 15 anomalous time intervals\n",
-        "anomalies = np.argsort(Onorm)[-15:]\n",
+        "\n",
         "\n",
         "### Plotting\n",
-        "# First, plot the amount of total traffic\n",
         "Anorm = np.linalg.norm(Atraf,axis=1)\n",
         "plt.plot(Anorm)\n",
         "\n",
@@ -1776,7 +1795,7 @@
         "plt.title('Top 15 Anomalies')\n",
         "plt.xlabel('10-minutes intervals')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1861,7 +1880,7 @@
         "print(FBSpatial)\n",
         "print(FBSpatial.shape)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1915,7 +1934,7 @@
         "plt.title('Number of Likes Per User')\n",
         "plt.xlabel('Users')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1972,7 +1991,7 @@
         "plt.xlabel(r'$k$',size=20)\n",
         "plt.ylabel(r'$\\sigma_k$',size=20)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2051,7 +2070,7 @@
         "plt.xlabel('User ids', size=20)\n",
         "plt.ylabel('Total likes',size=20)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2150,7 +2169,7 @@
         "plt.xlabel('k', size=20)\n",
         "plt.ylabel(r'Normalized $\\sigma_k$', size=20)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2210,7 +2229,7 @@
         "anomSet = np.argsort(Onorm)[-30:]\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2239,7 +2258,7 @@
         "plt.xlabel('User ids', size=20)\n",
         "plt.ylabel('Total likes', size=20)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2366,7 +2385,7 @@
       "source": [
         ""
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     }
   ]
