Some references added

--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -1333,7 +1333,7 @@
         "\n",
         "Your dataset may have columns with different magnitudes, e.g., columms are in different unities of measurement, for instance bytes, gygabytes, 5-stars-ratings and audio bitrates all in the same dataset, if you apply Singular Value Decomposition (SVD) right away, the columns with the highest magnitude risk to monopolize the decomposition. \n",
         "\n",
-        "In such cases, it is advisable to apply StandardScaler to your dataset and apply SVD to the transformed dataset. Observe that Standard scaling also center all the columns of the dataset around their mean, which is also useful, as it makes the decomposition insensible to the mean of each column.\n",
+        "In such cases, it is advisable [12] to apply StandardScaler to your dataset and apply SVD to the transformed dataset. Observe that Standard scaling also center all the columns of the dataset around their mean, which is also useful, as it makes the decomposition insensible to the mean of each column.\n",
         "\n",
         "However, in this notebook, Marc Crovella decided not to scale and center the dataset. In his case, this is acceptable, as all the columns have the same semantics and the same magnitude (they are all traffic counts).\n",
         "\n",
@@ -2371,7 +2371,7 @@
         "<tr>\n",
         "<td valign=\"baseline\" align=\"left\" class=\"p\">\n",
         "[12]\n",
-        "[Singular Value Decomposition](https://online.stat.psu.edu/stat555/node/94/), STAT 555, Statistical Analysis of Genomics Data, PennState University.\n",
+        "Singular Value Decomposition, https://online.stat.psu.edu/stat555/node/94/, STAT 555, Statistical Analysis of Genomics Data, PennState University.\n",
         "</table>\n",
         "\n",
         "\n"
@@ -2382,9 +2382,7 @@
       "metadata": {
         "id": "yR8LXJyk-Ek4"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
