Some cleaning in the text

--- a/BarcelonaCourse.ipynb
+++ b/BarcelonaCourse.ipynb
@@ -78,7 +78,7 @@
         "\n",
         "from sklearn.preprocessing import StandardScaler"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +139,7 @@
         "Xtraf_orig = pd.read_table('data/net-traffic/AbileneFlows/X',sep='  ',header=None,\n",
         "                      names=odnames,engine='python')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
         "Xtraf_orig.index = dates\n",
         "Xtraf_orig"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -662,7 +662,7 @@
       "metadata": {
         "id": "MjMq4FfPXTgD"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -702,7 +702,7 @@
         "plt.title(r'Variance of components of $\\mathbf{X}$',size=20)\n",
         "print('')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -787,7 +787,7 @@
           "height": 398
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -839,30 +839,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "B_ZuSXMjIhfZ"
-      },
-      "source": [
-        "The anomaly detection problem is as follows: given a population $P$, divide the members of $P$ in a normal set $N$ and an anomalous set $O$."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "1M-KIqchIhfZ"
       },
       "source": [
         "We can use dimensionality reduction to perform anomaly detection in an unsupervised way (no need for labeled data)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "d2TJ4oNIIhfa"
-      },
-      "source": [
-        "We make the assumption that in the dataset $P$, __the majority of samples are normal.__\n",
-        "\n",
-        "Therefore, the samples that are \"different\" can be classified as anomalies (or abnormal points)"
       ]
     },
     {
@@ -930,7 +910,9 @@
       "source": [
         "This data consists of the number of bytes flowing between 121 origin-destination pairs in the Abilene network, sampled at 10 minute intervals, for one week.\n",
         "\n",
-        "Rows (samples) are timebins, Columns are source-destination pairs."
+        "Rows (samples) are timebins, Columns are source-destination pairs.\n",
+        "\n",
+        "We want to find timeslots in which an anomaly has occurred."
       ]
     },
     {
@@ -964,7 +946,7 @@
         "plt.ylabel('Anomaly score of the timeslot')\n",
         "plt.title(r'$\\ell_2$ Norm of Anomalous Traffic')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1012,7 +994,7 @@
       "metadata": {
         "id": "Zb1aMY_4hjUD"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1046,7 +1028,7 @@
         "plt.title('Top 15 Anomalies')\n",
         "plt.xlabel('10-minutes intervals')"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1102,7 +1084,7 @@
         "id": "0BfD6S75JvrY"
       },
       "source": [
-        "*Araldo*: We want to recognize \"fake\" users, i.e., profiles created (or legitimate profiles compromised) with the objective to perform malicious activity, as artificially increasing the number of likes of certain pages, which may pay for this kind of \"service\" to gain popularity [1]."
+        "We want to recognize \"fake\" users, i.e., profiles created (or legitimate profiles compromised) with the objective to perform malicious activity, as artificially increasing the number of likes of certain pages, which may pay for this kind of \"service\" to gain popularity [1]."
       ]
     },
     {
@@ -1113,7 +1095,9 @@
       "source": [
         "This data consists of the number of 'Likes' for each of 9000 users, over 6 months, across the 210 content categories that Facebook assigns to pages.\n",
         "\n",
-        "**Rows are users**, **columns are content categories**."
+        "**Rows are users**, **columns are content categories**.\n",
+        "\n",
+        "The goal is to find anomalous users."
       ]
     },
     {
@@ -1138,7 +1122,7 @@
         "print(FBSpatial)\n",
         "print(FBSpatial.shape)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1198,7 +1182,7 @@
         "plt.title('Deviation from average user number of likes')\n",
         "plt.xlabel('Users')"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1259,7 +1243,7 @@
         "plt.xlabel(r'$r$',size=20)\n",
         "plt.ylabel(r'$\\sigma_r^2$',size=20)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1336,7 +1320,7 @@
         "plt.xlabel('User ids', size=20)\n",
         "plt.ylabel('Deviation from average total likes',size=20)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1390,7 +1374,7 @@
         "id": "iosBgj-2Ihf-"
       },
       "source": [
-        "### Example 3: Facebook Temporal LIkes"
+        "### Example 3: Facebook Temporal Likes"
       ]
     },
     {
@@ -1401,7 +1385,9 @@
       "source": [
         "This data consists of the number of 'Likes' for each of 9000 users, over 6 months, on a daily basis\n",
         "\n",
-        "Rows are users, Columns are days."
+        "Rows are users, Columns are days.\n",
+        "\n",
+        "The goal is again to find anomalous users (by looking at their temporal activity instead of their likes across categories)"
       ]
     },
     {
@@ -1445,7 +1431,7 @@
         "plt.xlabel('r', size=20)\n",
         "plt.ylabel(r'Normalized $\\sigma_k^2$', size=20)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1476,15 +1462,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "AfvciXVJIhgE"
-      },
-      "source": [
-        "Next, plot the anomalous users as before."
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "oNmofJbpOyww"
@@ -1505,7 +1482,7 @@
         "anomSet = np.argsort(Onorm)[-30:]\n",
         "\n"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1534,7 +1511,7 @@
         "plt.xlabel('User ids', size=20)\n",
         "plt.ylabel('Total likes', size=20)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
